Fixed missing wrap in footer menu

--- a/wcfsetup/install/files/style/layout/box.scss
+++ b/wcfsetup/install/files/style/layout/box.scss
@@ -788,6 +788,7 @@
 .boxesFooter {
 	.boxMenu {
 		display: inline-flex;
+		flex-wrap: wrap;
 		margin-left: -10px;
 		margin-right: -10px;
 		
